# slipstream-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/slipstream-bench/: Cargo.toml
crates/slipstream-bench/src/: analyze.rs  echo.rs  main.rs  sink.rs  source.rs  udp_proxy.rs
crates/slipstream-client/: Cargo.toml
crates/slipstream-client/src/: dns.rs  main.rs  pacing.rs  streams.rs
crates/slipstream-client/src/dns/: debug.rs  poll.rs  resolver.rs
crates/slipstream-client/src/runtime/: mod.rs  path.rs
crates/slipstream-client/src/runtime_tquic/: mod.rs  path.rs
crates/slipstream-core/src/: lib.rs
crates/slipstream-dns/src/: fragment.rs  lib.rs
crates/slipstream-ffi/: Cargo.toml  build.rs
crates/slipstream-ffi/src/: runtime.rs
crates/slipstream-quic/: Cargo.toml
crates/slipstream-quic/src/: client.rs  config.rs  error.rs  lib.rs  multipath.rs  server.rs  stream.rs
crates/slipstream-server/: Cargo.toml
crates/slipstream-server/src/: main.rs  server.rs  server_tquic.rs
docs/: benchmarks.md  config.md  interop.md  usage.md
fixtures/certs/: README.md  alt_cert.pem  alt_key.pem  cert.pem  key.pem
scripts/: README.md  build_picoquic.sh
scripts/bench/: run_rust_rust_10mb.sh
scripts/interop/: run_local.sh  run_rust_client.sh  run_rust_rust.sh  run_rust_server.sh
