[package]
name = "slipstream-bench"
version = "0.1.0"
edition = "2021"
description = "TCP benchmark harness for slipstream tests"

[[bin]]
name = "slipstream-bench"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
hex = "0.4"
rand = "0.8"
rand_distr = "0.4"
serde = { workspace = true }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
