[package]
name = "slipstream-quic"
version = "0.1.0"
edition = "2021"
description = "QUIC transport layer for Slipstream using tquic"
license = "Apache-2.0"
repository = "https://github.com/Mygod/slipstream-rust"
readme = "../../README.md"

[features]
default = []

[dependencies]
tquic = "1.6"
tokio = { version = "1.37", features = ["io-util", "net", "sync", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1.37", features = ["rt", "macros"] }
